@@ -29,6 +29,9 @@
 #include "../BookManipulation/XHTMLDoc.h"
 #include "../BookManipulation/GuideSemantics.h"
 #include "ResourceObjects/HTMLResource.h"
+#include "CustomSyncs/SGReadLocker.h"
+#include "CustomSyncs/SGWriteLocker.h"
+
 
 static const QString SIGIL_HEADING_ID_PREFIX = "heading_id_";
 static const QString SIGIL_HEADING_ID_REG    = SIGIL_HEADING_ID_PREFIX + "(\\d+)";
@@ -61,7 +64,7 @@ void BookNormalization::GiveIDsToHeadings( QList< HTMLResource* > html_resources
 
 void BookNormalization::GiveIDsToHeadingsInResource( HTMLResource *html_resource )
 {
-    QReadLocker locker( &html_resource->GetLock() );
+    SGReadLocker locker( &html_resource->GetLock() );
 
     QList< Headings::Heading > headings = Headings::GetHeadingListForOneFile( html_resource );
 
@@ -159,7 +162,7 @@ void BookNormalization::TryToSetCoverImage( QList< HTMLResource* > html_resource
 
         return;
 
-    QReadLocker locker( &cover_page->GetLock() );
+    SGReadLocker locker( &cover_page->GetLock() );
 
     QStringList image_paths = XHTMLDoc::GetImagePathsFromImageChildren( cover_page->GetDomDocumentForReading() );
 
@@ -182,7 +185,7 @@ void BookNormalization::TryToSetCoverImage( QList< HTMLResource* > html_resource
 
 bool BookNormalization::IsFlowUnderThreshold( HTMLResource *html_resource, int threshold )
 {
-    QReadLocker locker( &html_resource->GetLock() );
+    SGReadLocker locker( &html_resource->GetLock() );
 
     QDomElement doc_element = html_resource->GetDomDocumentForReading().documentElement();
     return doc_element.text().count() < threshold;
