@@ -25,6 +25,9 @@
 #include "../BookManipulation/CleanSource.h"
 #include "../BookManipulation/XHTMLDoc.h"
 #include "../BookManipulation/GuideSemantics.h"
+#include "CustomSyncs/SGReadLocker.h"
+#include "CustomSyncs/SGWriteLocker.h"
+
 
 static const QString LOADED_CONTENT_MIMETYPE = "application/xhtml+xml";
 
@@ -107,7 +110,7 @@ QTextDocument& HTMLResource::GetTextDocument()
 
 void HTMLResource::SetDomDocument( const QDomDocument &document )
 {
-    QWriteLocker locker( &m_ReadWriteLock );
+    SGWriteLocker locker( &m_ReadWriteLock );
 
     m_DomDocument = document;
 
@@ -236,7 +239,7 @@ void HTMLResource::UpdateTextDocumentFromWebPage()
 
 void HTMLResource::SaveToDisk( bool book_wide_save )
 {
-    QWriteLocker locker( &m_ReadWriteLock );
+    SGWriteLocker locker( &m_ReadWriteLock );
 
     Utility::WriteUnicodeTextFile( CleanSource::PrettyPrint( XHTMLDoc::GetQDomNodeAsString( m_DomDocument ) ),
                                    m_FullFilePath );
