@@ -22,6 +22,9 @@
 #include <stdafx.h>
 #include "TextResource.h"
 #include "../Misc/Utility.h"
+#include "CustomSyncs/SGReadLocker.h"
+#include "CustomSyncs/SGWriteLocker.h"
+
 
 TextResource::TextResource( const QString &fullfilepath, QHash< QString, Resource* > *hash_owner, QObject *parent )
     : 
@@ -61,7 +64,7 @@ void TextResource::SaveToDisk( bool book_wide_save )
     // when the user has not changed the text file.
     // (some text files have placeholder text on disk)
 
-    QWriteLocker locker( &m_ReadWriteLock );
+    SGWriteLocker locker( &m_ReadWriteLock );
 
     Utility::WriteUnicodeTextFile( m_TextDocument->toPlainText(), m_FullFilePath );
 
@@ -75,7 +78,7 @@ void TextResource::SaveToDisk( bool book_wide_save )
 
 void TextResource::InitialLoad()
 {
-    QWriteLocker locker( &m_ReadWriteLock );
+    SGWriteLocker locker( &m_ReadWriteLock );
 
     Q_ASSERT( m_TextDocument );
 
