@@ -24,6 +24,8 @@
 #include "ResourceObjects/HTMLResource.h"
 #include "../BookManipulation/XHTMLDoc.h"
 #include "../Misc/Utility.h"
+#include "CustomSyncs/SGReadLocker.h"
+#include "CustomSyncs/SGWriteLocker.h"
 
 
 void AnchorUpdates::UpdateAllAnchorsWithIDs( const QList< HTMLResource* > &html_resources )
@@ -61,7 +63,7 @@ tuple< QString, QList< QString > > AnchorUpdates::GetOneFileIDs( HTMLResource* h
 {
     Q_ASSERT( html_resource );
 
-    QReadLocker locker( &html_resource->GetLock() );
+    SGReadLocker locker( &html_resource->GetLock() );
 
     return make_tuple( html_resource->Filename(),
         XHTMLDoc::GetAllChildIDs( html_resource->GetDomDocumentForReading().documentElement() ) );
@@ -73,7 +75,7 @@ void AnchorUpdates::UpdateAnchorsInOneFile( HTMLResource *html_resource,
 {
     Q_ASSERT( html_resource );
 
-    QWriteLocker locker( &html_resource->GetLock() );
+    SGWriteLocker locker( &html_resource->GetLock() );
 
     QDomDocument document = html_resource->GetDomDocumentForWriting();
     QDomNodeList anchors  = document.elementsByTagName( "a" );
