@@ -1,4 +1,5 @@
 ﻿Sigil v0.2.1 ADD_DATE
+    - use of custom synchronization primitives should resolve most infrequent hang bugs
     - fixed a problem with the search not progressing in Book View find&replace when using
     recursive replacements
     - fixed an issue with inserting images that have apostrophes in the filename (issue #391) 
